updated package.json to fix vulnerabilities

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "author": "Jarryd Trokis",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "1.5.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "^0.28.7",
     "jest": "^23.5.0",
@@ -42,10 +42,12 @@
   },
   "standard": {
     "parser": "babel-eslint",
-    "env": [ "jest" ]
+    "env": [
+      "jest"
+    ]
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "^8.2.6",
     "standard": "^10.0.3"
   }
 }
